# patch-gui

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  RELEASE.md  USAGE.md  WARP.md  build_translations.py  diff_applier_gui.py  generate_logo_assets.py  patch_gui.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
images/: README.md
patch_gui/: __init__.py  __main__.py  _assets.py  _version.py  ai_candidate_selector.py  ai_conflict_helper.py  ai_summaries.py  app.py  binary_patch.py  cli.py  config.py  diff_applier_gui.py  diff_formatting.py  diff_search.py  downloader.py  executor.py  file_index.py  filetypes.py  highlighter.py  i18n.py  interactive_diff.py  interactive_diff_model.py  interactive_diff_models.py  localization.py  logging_utils.py  logo_widgets.py  matching.py  parser.py  patcher.py  platform.py  qt_types.py  reporting.py  split_diff_view.py  summaries.py  theme.py  utils.py
patch_gui/locale/: patch_gui.pot
patch_gui/locale/it/LC_MESSAGES/: patch_gui.po
patch_gui/translations/: patch_gui_en.ts  patch_gui_it.ts
scripts/: benchmark_file_index.py  benchmark_matching.py  build_packages.py  release_automation.py
tests/: __init__.py  _binary_fixture.py  _pytest_typing.py  conftest.py  test_ai_conflict_helper.py  test_ai_summaries.py  test_cli.py  test_config.py  test_diff_applier_gui.py  test_diff_search.py  test_downloader.py  test_filetypes.py  test_gui_patch_worker.py  test_i18n.py  test_interactive_diff_formatting.py  test_interactive_diff_widget.py  test_localization.py  test_logging.py  test_matching.py  test_packaging.py  test_patcher.py  test_platform.py  test_pyproject_configuration.py  test_summaries.py  test_theme.py  test_theme_manager.py  test_utils.py  typing_helpers.py
