[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patch-gui"
version = "0.1.0"
description = "PySide6 desktop application for applying unified diffs interactively."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "charset-normalizer>=3.3.2",
    "unidiff",
]

[project.optional-dependencies]
gui = [
    "PySide6",
]

[project.scripts]
patch-gui = "patch_gui.__main__:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["patch_gui*"]

[tool.setuptools.package-data]
"patch_gui" = ["translations/*.ts"]

[tool.mypy]
python_version = "3.9"
strict = true
files = ["patch_gui", "tests"]

[[tool.mypy.overrides]]
module = [
    "PySide6",
    "PySide6.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["unidiff", "unidiff.*"]
ignore_missing_imports = true
