[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patch-gui"
version = "0.1.0"
description = "PySide6 desktop application for applying unified diffs interactively."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "charset-normalizer>=3.3.2",
    "unidiff",
]

[project.optional-dependencies]
gui = [
    "PySide6",
]

[project.scripts]
patch-gui = "patch_gui.__main__:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["patch_gui*"]

[tool.setuptools.package-data]
"patch_gui" = ["translations/*.ts", "translations/*.qm"]

[tool.setuptools.cmdclass]
# NOTE: setuptools>=75 validates that cmdclass targets are python-qualified
# identifiers (``module.Class``). Keep these dotted to avoid install-time
# failures when ``validate-pyproject`` checks the configuration.
build_py = "build_translations.BuildPy"
sdist = "build_translations.SDist"

[tool.mypy]
python_version = "3.9"
strict = true
files = ["patch_gui", "tests"]

[[tool.mypy.overrides]]
module = [
    "PySide6",
    "PySide6.*",
    "charset_normalizer",
    "charset_normalizer.*",
    "unidiff",
    "unidiff.*",
    "setuptools",
    "setuptools.*",
]
ignore_missing_imports = true

