[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patch-gui"
version = "0.2.0"
description = "PySide6 desktop application for applying unified diffs interactively."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Patch GUI Maintainers", email = "maintainers@patch-gui.dev" },
]
keywords = [
    "diff",
    "patch",
    "gui",
    "cli",
    "developer-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Italian",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Version Control",
    "Topic :: Utilities",
]
dependencies = [
    "charset-normalizer>=3.3.2",
    "unidiff",
]

[project.urls]
Homepage = "https://github.com/patch-gui/patch-gui"
Source = "https://github.com/patch-gui/patch-gui"
Documentation = "https://github.com/patch-gui/patch-gui/blob/work/USAGE.md"
Changelog = "https://github.com/patch-gui/patch-gui/blob/work/CHANGELOG.md"
Releases = "https://github.com/patch-gui/patch-gui/releases"

[project.optional-dependencies]
gui = [
    "PySide6",
]

[project.scripts]
patch-gui = "patch_gui.__main__:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["patch_gui*"]

[tool.setuptools.package-data]
"patch_gui" = [
    "py.typed",
    "translations/*.ts",
    "translations/*.qm",
    "resources/*.svg",
]

[tool.setuptools.cmdclass]
# NOTE: setuptools>=75 validates that cmdclass targets are python-qualified
# identifiers (``module.Class``). Keep these dotted to avoid install-time
# failures when ``validate-pyproject`` checks the configuration.
build_py = "build_translations.BuildPy"
sdist = "build_translations.SDist"

[tool.mypy]
python_version = "3.10"
strict = true
files = ["patch_gui", "tests"]

[[tool.mypy.overrides]]
module = [
    "PySide6",
    "PySide6.*",
    "charset_normalizer",
    "charset_normalizer.*",
    "unidiff",
    "unidiff.*",
    "setuptools",
    "setuptools.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "patch_gui.app",
    "patch_gui.logo_widgets",
    "patch_gui.qt_types",
]
allow_subclassing_any = true

